Update springs
(cherry picked from commit 823fbdec23efed3be5f284c8fa3ce72b03700bd7)