@@ -18,19 +18,18 @@
     <enforcer.maven-version>[3.3.0,)</enforcer.maven-version>
     <java.version>21</java.version>
 
-    <springframework.version>3.3.5</springframework.version>
+    <springframework.version>3.4.2</springframework.version>
     <springdoc.version>1.8.0</springdoc.version>
     <vaadin.version>24.6.2</vaadin.version>
     <org.json.version>20250107</org.json.version>
-    <liquibase.version>4.27.0</liquibase.version>
-    <opencsv.version>5.10</opencsv.version>
+    <opencsv.version>5.9</opencsv.version>
 
     <weasis-dicom-tools.version>5.32.0</weasis-dicom-tools.version>
     <weasis.opencv.native.version>4.9.0-dcm</weasis.opencv.native.version>
 
     <h2.version>2.2.224</h2.version>
     <mockito.version>5.2.0</mockito.version>
-    <swagger.version>2.2.22</swagger.version>
+    <swagger.version>2.2.26</swagger.version>
 
     <sonar.organization>osirix-foundation-1</sonar.organization>
     <sonar.projectKey>karnak</sonar.projectKey>
@@ -186,10 +185,7 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.liquibase</groupId>
-        <artifactId>liquibase-maven-plugin</artifactId>
-      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -263,6 +259,7 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.44.2</version>
         <configuration>
           <!-- define a language-specific format -->
           <java>
@@ -282,6 +279,14 @@
               <!-- @formatter:on -->
             </licenseHeader>
           </java>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+          <parallel>all</parallel>
         </configuration>
       </plugin>
     </plugins>
@@ -332,6 +337,12 @@
     <dependency>
       <artifactId>spring-boot-starter</artifactId>
       <groupId>org.springframework.boot</groupId>
+      <exclusions>
+        <exclusion>
+          <groupId>com.vaadin.external.google</groupId>
+          <artifactId>android-json</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -415,24 +426,6 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
-    <!-- Vaadin Spring -->
-    <dependency>
-      <artifactId>vaadin-spring-boot-starter</artifactId>
-      <exclusions>
-        <!-- Excluding so that webjars are not included. -->
-        <exclusion>
-          <artifactId>vaadin-core</artifactId>
-          <groupId>com.vaadin</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>spring-boot-starter-web</artifactId>
-          <groupId>org.springframework.boot</groupId>
-        </exclusion>
-      </exclusions>
-      <groupId>com.vaadin</groupId>
-      <version>${vaadin.version}</version>
-    </dependency>
-
     <!-- Spring Security -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -477,9 +470,8 @@
     <!-- Liquibase -->
     <!-- ========= -->
     <dependency>
-      <artifactId>liquibase-maven-plugin</artifactId>
       <groupId>org.liquibase</groupId>
-      <version>${liquibase.version}</version>
+      <artifactId>liquibase-core</artifactId>
     </dependency>
 
     <!-- ========= -->
@@ -487,6 +479,7 @@
     <!-- ========= -->
     <!-- Vaadin Spring -->
     <dependency>
+      <groupId>com.vaadin</groupId>
       <artifactId>vaadin-spring-boot-starter</artifactId>
       <exclusions>
         <!-- Excluding so that webjars are not included. -->
@@ -499,8 +492,6 @@
           <groupId>org.springframework.boot</groupId>
         </exclusion>
       </exclusions>
-      <groupId>com.vaadin</groupId>
-      <version>${vaadin.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -517,7 +508,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>32.1.3-jre</version>
+      <version>33.3.0-jre</version>
     </dependency>
 
     <dependency>
